создание сервер чата
